fix: save change buttons padding on mobile

--- a/sass/account/profile/page.module.sass
+++ b/sass/account/profile/page.module.sass
@@ -66,7 +66,6 @@ div.content
                         @media screen and (max-width: 950px)
                             font-size: 14px
                             margin: 3px 0
-                            padding: 2px 4px
                         &:hover
                             background: var(--font-nd)
             & input
